<resources>
    <string name="app_name">BaseDeDatos</string>

    <string name="bienvenido">Bienvenido a la Base de Datos</string>
    <string name="action_settings">Settings</string>
    <string name="ELIGA_UNA_OPCION">Elige una opcion</string>
    <string name="alumnos">Alumnos</string>
    <string name="alumno">Alumnos</string>
    <string name="salir">Salir</string>
    <string name="title_activity_alumnos">alumnos</string>
    <string name="nocontrol">Numero de Control</string>
    <string name="nombre">Nombre</string>
    <string name="apellidos">Apellidos</string>
    <string name="email">Email</string>
    <string name="carrera">Carrera</string>
    <string name="registrar">Registrar</string>
    <string name="consultar">Consultar</string>
    <string name="eliminar">Eliminar</string>
    <string name="modificar">Modificar</string>
    <string name="limpiar">Limpiar</string>
    <string name="hello_world">Hello world!</string>
</resources>
