<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".MainActivity"
    android:background="#ffd2daff"
    android:fillViewport="false">

    <!--Se declaran los LinearLayout,  los TexView´s y los EditText que se utilizaran
        para resgistrar y mostrar la informacion correspondiente-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nocontrol"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/nocontrol"
            android:inputType="phone"
            android:digits="1234567890"/>


        <TextView
            android:text="@string/nombre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/nombre"
            />

        <TextView
            android:text="@string/apellidos"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/apellidos" />


        <TextView
            android:text="@string/email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/email" />

        <TextView
            android:text="@string/carrera"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/carrera" />


        <!--Se declara un LinearLayout y dentro los botones que se utilizaran
        en la aplicacion-->

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp">

            <Button
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:id="@+id/btn_alta"
                android:onClick="alta"
                android:textStyle="bold"
                android:text="@string/registrar"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="0dp"/>

            <Button
                android:layout_width="105dp"
                android:layout_height="wrap_content"
                android:id="@+id/btn_consultar"
                android:onClick="consulta"
                android:textStyle="bold"
                android:text="@string/consultar"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="20dp"/>

            <Button
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:id="@+id/btn_baja"
                android:onClick="baja"
                android:textStyle="bold"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="30dp"
                android:text="@string/eliminar" />

        </LinearLayout>


        <!--Se declara un LinearLayout y dentro los botones que se utilizaran
        en la aplicacion-->
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="20dp">


            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/btn_modificar"
                android:onClick="modificacion"
                android:textStyle="bold"

                android:text="@string/modificar"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="10dp"/>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/btn_limpiar"
                android:onClick="limpia"
                android:textStyle="bold"
                android:text="@string/limpiar"

                android:layout_marginLeft="45dp"
                android:singleLine="true"
                android:layout_weight="0.01"
                android:layout_marginTop="10dp"/>


        </LinearLayout>


    </LinearLayout>

</ScrollView>

